--- a/style.css
+++ b/style.css
@@ -55,9 +55,6 @@ a:hover{
   border-radius: 4px;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
 }
-.img-circle{
-  border-radius: 50%;
-}
 .text-center{
   text-align: center;
 }
@@ -85,11 +82,6 @@ a:hover{
 
 /* Specific CSS rules */
 
-#img-profile{
-  width: 100px;
-  height: 100px;
-  border: 3px solid #cccccc;
-}
 #movies{
   font-weight: 300;
   font-size: 15px;
@@ -100,4 +92,41 @@ a:hover{
 }
 #movies td{
   padding: 10px;
+}
+
+.profile-header-wrapper {
+  background: #2c2522;
+  padding: 0 50px;
+  margin-bottom: 20px;
+  border-radius: 4px;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
+}
+.profile-header-container img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+.profile-header-container h1 {
+  color: white;
+  font-size: 28px;
+  font-weight: bold;
+  letter-spacing: -1px;
+  margin-top: 0;
+}
+.profile-header-container h2 {
+  color: white;
+  opacity: 0.4;
+  font-size: 18px;
+  font-weight: lighter;
+  margin-bottom: 0;
+  letter-spacing: -1px;
+  margin-bottom: 0;
+}
+.profile-header-infos {
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+}
+.profile-header-username {
+  padding: 20px;
 }
